--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./Elastislide/css/custom.css">
+  <link rel="stylesheet" href="./Elastislide/css/elastislide.css">
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
   <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic" rel="stylesheet">-->
   <link rel="stylesheet" href="./css/main.css">
@@ -149,118 +151,127 @@
         <div class="content">
           <div class="h3">Lorem ipsum dolor.</div>
           <div class="content-row clearfix">
-            <div class="col-md-4">
-              <div class="item">
-                <div class="favourite">
-                  <i class="glyphicon glyphicon-heart"></i>
-                </div>
-                <div class="img-container">
-                  <img src="./img/goods1.jpg" alt=""></div>
-                <h3>Lorem ipsum dolor</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                <div class="buy">
-                  <p>Price: 20$</p>
-                  <button class="btn btn-default">Lorem ipsum.</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="sale img-circle">sale</div>
-                <div class="img-container"><img src="./img/goods2.jpg" alt=""></div>
-                <h3>Ab perspiciatis ratione sint.</h3>
-                <p>Iste minima neque nesciunt odio voluptatum?</p>
-                <div class="buy">
-                  <p>Price: 20$ </p>
-                  <button class="btn btn-default">Beatae, obcaecati.</button>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="favourite">
+                    <i class="glyphicon glyphicon-heart"></i>
+                  </div>
+                  <div class="img-container">
+                    <img src="./img/goods1.jpg" alt=""></div>
+                  <h3>Lorem ipsum dolor</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                  <div class="buy">
+                    <p>Price: 20$</p>
+                    <button class="btn btn-default">Lorem ipsum.</button>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="img-container"><img src="./img/goods3.jpg" alt=""></div>
-                <h3>Dicta explicabo ipsa minus.</h3>
-                <p>Beatae eum eveniet fugit nisi non.</p>
-                <div class="buy">
-                  <p>Price: 20$</p>
-                  <button class="btn btn-default">Molestias, quia?</button>
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="sale img-circle">sale</div>
+                  <div class="img-container"><img src="./img/goods2.jpg" alt=""></div>
+                  <h3>Ab perspiciatis ratione sint.</h3>
+                  <p>Iste minima neque nesciunt odio voluptatum?</p>
+                  <div class="buy">
+                    <p>Price: 20$ </p>
+                    <button class="btn btn-default">Beatae, obcaecati.</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="img-container"><img src="./img/goods3.jpg" alt=""></div>
+                  <h3>Dicta explicabo ipsa minus.</h3>
+                  <p>Beatae eum eveniet fugit nisi non.</p>
+                  <div class="buy">
+                    <p>Price: 20$</p>
+                    <button class="btn btn-default">Molestias, quia?</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="h3">Lorem ipsum dolor.</div>
           <div class="content-row clearfix">
-            <div class="col-md-4">
-              <div class="item">
-                <div class="img-container"><img src="./img/goods4.jpg" alt=""></div>
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                <div class="buy">
-                  <p>Price: 20$</p>
-                  <button class="btn btn-default">Lorem ipsum.</button>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="img-container"><img src="./img/goods4.jpg" alt=""></div>
+                  <h3>Lorem ipsum dolor sit.</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                  <div class="buy">
+                    <p>Price: 20$</p>
+                    <button class="btn btn-default">Lorem ipsum.</button>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="img-container"><img src="./img/goods5.jpg" alt=""></div>
-                <h3>Aliquid amet explicabo sint.</h3>
-                <p>Asperiores assumenda obcaecati odio odit! Alias!</p>
-                <div class="buy">
-                  <p>Price: 20$</p>
-                  <button class="btn btn-default">Amet, eveniet?</button>
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="img-container"><img src="./img/goods5.jpg" alt=""></div>
+                  <h3>Aliquid amet explicabo sint.</h3>
+                  <p>Asperiores assumenda obcaecati odio odit! Alias!</p>
+                  <div class="buy">
+                    <p>Price: 20$</p>
+                    <button class="btn btn-default">Amet, eveniet?</button>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="img-container"><img src="./img/goods6.jpg" alt=""></div>
-                <h3>Deleniti impedit libero nisi.</h3>
-                <p>Maiores minima officiis reiciendis temporibus vero?</p>
-                <div class="buy">
-                  <p>Price: 20$</p>
-                  <button class="btn btn-default">Cumque, odit?</button>
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="img-container"><img src="./img/goods6.jpg" alt=""></div>
+                  <h3>Deleniti impedit libero nisi.</h3>
+                  <p>Maiores minima officiis reiciendis temporibus vero?</p>
+                  <div class="buy">
+                    <p>Price: 20$</p>
+                    <button class="btn btn-default">Cumque, odit?</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="banner-row clearfix">
-            <div class="col-md-4"><img src="./img/content-banner1.jpg" alt=""></div>
-            <div class="col-md-4"><img src="./img/content-banner2.jpg" alt=""></div>
-            <div class="col-md-4"><img src="./img/content-banner3.jpg" alt=""></div>
+            <div class="row">
+              <div class="col-md-4"><img src="./img/content-banner1.jpg" alt=""></div>
+              <div class="col-md-4"><img src="./img/content-banner2.jpg" alt=""></div>
+              <div class="col-md-4"><img src="./img/content-banner3.jpg" alt=""></div>
+            </div>
           </div>
           <div class="h3">Lorem ipsum dolor.</div>
+
           <div class="content-row clearfix">
-            <div class="col-md-4">
-              <div class="item">
-                <div class="img-container"><img src="./img/goods7.jpg" alt=""></div>
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                <div class="buy">
-                  <p>Price: 20$</p>
-                  <button class="btn btn-default">Lorem ipsum.</button>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="img-container"><img src="./img/goods7.jpg" alt=""></div>
+                  <h3>Lorem ipsum dolor sit.</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                  <div class="buy">
+                    <p>Price: 20$</p>
+                    <button class="btn btn-default">Lorem ipsum.</button>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="img-container"><img src="./img/goods8.jpg" alt=""></div>
-                <h3>Aperiam libero porro suscipit.</h3>
-                <p>Distinctio ducimus id laudantium odit repellat.</p>
-                <div class="buy">
-                  <p>Price: 20$</p>
-                  <button class="btn btn-default">Dolorum, impedit!</button>
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="img-container"><img src="./img/goods8.jpg" alt=""></div>
+                  <h3>Aperiam libero porro suscipit.</h3>
+                  <p>Distinctio ducimus id laudantium odit repellat.</p>
+                  <div class="buy">
+                    <p>Price: 20$</p>
+                    <button class="btn btn-default">Dolorum, impedit!</button>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="img-container"><img src="./img/goods9.jpg" alt=""></div>
-                <h3>Accusantium nesciunt officiis sunt.</h3>
-                <p>Alias dicta illum laboriosam magni similique!</p>
-                <div class="buy">
-                  <p>Price: 20$ </p>
-                  <button class="btn btn-default">Consequatur, error?</button>
+              <div class="col-md-4">
+                <div class="item">
+                  <div class="img-container"><img src="./img/goods9.jpg" alt=""></div>
+                  <h3>Accusantium nesciunt officiis sunt.</h3>
+                  <p>Alias dicta illum laboriosam magni similique!</p>
+                  <div class="buy">
+                    <p>Price: 20$ </p>
+                    <button class="btn btn-default">Consequatur, error?</button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -368,11 +379,13 @@
           <div class="col-md-5">
             <div class="form-inlile">
               <div class="form-group"><input type="text" class="form-control" placeholder="lorem ipsom"></div>
-            </div></div>
+            </div>
+          </div>
           <div class="col-md-5">
             <div class="form-inlile">
               <div class="form-group"><input type="text" class="form-control" placeholder="lorem ipsom dollor"></div>
-            </div></div>
+            </div>
+          </div>
           <div class="col-md-2">
             <button class="btn btn-red">Lorem</button>
           </div>
@@ -381,7 +394,111 @@
     </div>
   </div>
 </section>
+<section class="bottom-slider">
+  <div class="container">
+    <ul id="elastislide" class="elastislide-list">
+      <li><a href="#"><img src="img/partner1.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner4.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner5.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner1.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner4.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner5.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner1.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner4.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner5.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner1.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner4.jpg" alt="image01"/></a></li>
+      <li><a href="#"><img src="img/partner5.jpg" alt="image01"/></a></li>
+    </ul>
+  </div>
+</section>
+<footer>
+  <div class="footer-menu">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10">
+          <div class="row">
+            <div class="col-md-3 col-xs-6">
+              <h5>Lorem ipsum.</h5>
+              <ul class="list-unstyled">
+                <li><a href="#">Lorem ipsum.</a></li>
+                <li><a href="#">Beatae, veniam!</a></li>
+                <li><a href="#">Ratione, suscipit!</a></li>
+                <li><a href="#">Nihil, sunt.</a></li>
+                <li><a href="#">Modi, molestiae.</a></li>
+                <li><a href="#">Nostrum, odio?</a></li>
+                <li><a href="#">Libero, recusandae.</a></li>
+                <li><a href="#">Nostrum, vitae?</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3 col-xs-6">
+              <h5>Optio, repellat!</h5>
+              <ul class="list-unstyled">
+                <li><a href="#">Facilis, pariatur?</a></li>
+                <li><a href="#">Earum, odit.</a></li>
+                <li><a href="#">Assumenda, nemo?</a></li>
+                <li><a href="#">Numquam, quae.</a></li>
+              </ul>
+            </div>
+            <div class="clearfix hidden-lg"></div>
+            <div class="col-md-3 col-xs-6">
+              <h5>Minus, sequi!</h5>
+              <ul class="list-unstyled">
+                <li><a href="#">Lorem ipsum.</a></li>
+                <li><a href="#">Accusantium, illo.</a></li>
+                <li><a href="#">Repellendus, voluptate.</a></li>
+                <li><a href="#">Debitis, voluptate.</a></li>
+                <li><a href="#">Aperiam, fugiat!</a></li>
+
+              </ul>
+            </div>
+            <div class="col-md-3 col-xs-6">
+              <h5>Cum, cupiditate.</h5>
+              <ul class="list-unstyled">
+                <li><a href="#">Lorem ipsum.</a></li>
+                <li><a href="#">Dignissimos, itaque.</a></li>
+                <li><a href="#">Reprehenderit, ullam!</a></li>
+                <li><a href="#">A, qui.</a></li>
+                <li><a href="#">Eius, iste?</a></li>
+                <li><a href="#">Aut, tenetur.</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h5>Lorem ipsum</h5>
+          <img src="./img/fb.jpg" alt="">
+          <img src="./img/tw.jpg" alt="">
+          <img src="./img/fl.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copy">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p class="copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, nulla.</p>
+        </div>
+        <div class="col-md-8 text-right">
+          <img src="./img/pay1.jpg" alt="">
+          <img src="./img/pay2.jpg" alt="">
+          <img src="./img/pay3.jpg" alt="">
+          <img src="./img/pay4.jpg" alt="">
+          <img src="./img/pay5.jpg" alt="">
+          <img src="./img/pay6.jpg" alt="">
+          <img src="./img/pay7.jpg" alt="">
+          <img src="./img/pay8.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<script src="./Elastislide/js/modernizr.custom.17475.js"></script>
+<script src="./Elastislide/js/jquery.elastislide-rtl.js"></script>
+<script src="./Elastislide/js/jquery.elastislide.js"></script>
+<script src="./Elastislide/js/jquerypp.custom.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="./js/index.js"></script>
 </body>
